--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Next Website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<script src="https://kit.fontawesome.com/5f0d94f57e.js" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;600&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<nav class="navbar">
-		
+		<div class="navbar__container">
+			<a href="/" id="navbar__logo"> <i class="fas fa-gem"></i>NEXT</a>
+			<div class="navbar__toggle" id="mobile-menu">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</div>
+			<ul class="navbar__menu">
+				<li class="navbar__item"><a href="/" class="navbar__links"> Home </a></li>
+				<li class="navbar__item"><a href="tech.html" class="navbar__links"> Tech </a></li>
+				<li class="navbar__item"><a href="/" class="navbar__links"> Products </a></li>
+				<li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
+				
+			</ul>
+		</div>
 	</nav>
+
+	
 </body>
 <script type="text/javascript" src="app.js"></script>
 </html>
