--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 		</div>
 	</nav>
 
+		<div class="main">
+			<div class="main__container">
+				<div class="main__content">
+					<h1>NEXT GENERATION</h1>
+					<h2>TECHNOLOGY</h2>
+					<p>See what makes us diffirent.</p>
+					<button class="main__btn"><a href="/">Get Started</a></button>
+				</div>
+				<div class="main__img--container">
+					<img id="main__img" src="pic1.svg" alt="pic">
+				</div>
+			</div>
+		</div>
+
 	
 </body>
 <script type="text/javascript" src="app.js"></script>
