--- a/index.html
+++ b/index.html
@@ -43,7 +43,65 @@
 			</div>
 		</div>
 
-	
+		<div class="services">
+			<h1>See what the hype is about</h1>
+
+			<div class="services__container">
+				<div class="services__card">
+					<h2>Experience Bliss</h2>
+					<p>AI powered Technology</p>
+					<button>Get Started</button>
+				</div>
+				<div class="services__card">
+					<h2>Are you Ready?</h2>
+					<p>Take the leap</p>
+					<button>Get Started</button>
+				</div>
+				
+			</div>
+		</div>
+
+		<div class="footer__container">
+			<div class="footer__links">
+				<div class="footer__link--wrapper">
+					<div class="footer__link--items">
+						<h2>About Us</h2>
+						<a href="/">How it works</a>
+						<a href="/">Testimonals</a>
+						<a href="/">Careers</a>
+						<a href="/">Investments</a>
+						<a href="/">Terms of service</a>
+					</div>	
+					<div class="footer__link--items">
+						<h2>Contact Us</h2>
+						<a href="/">contact</a>
+						<a href="/">Support</a>
+						<a href="/">Destinations</a>
+						<a href="/">Sponsorships</a>
+					</div>	
+				</div>	
+				<div class="footer__link--wrapper">
+					<div class="footer__link--items">
+						<h2>Videos</h2>
+						<a href="/">Submit Video</a>
+						<a href="/">Ambassadors</a>
+						<a href="/">Agency</a>
+						<a href="/">Influencer</a>
+					</div>	
+					<div class="footer__link--items">
+						<h2>Social Media</h2>
+						<a href="/">Instagram</a>
+						<a href="/">Facebook</a>
+						<a href="/">Youtube</a>
+						<a href="/">Twitter</a>
+					</div>	
+				</div>
+			</div>
+			
+		</div>
+
+
+	<script type="text/javascript" src="app.js"></script>
 </body>
-<script type="text/javascript" src="app.js"></script>
+
 </html>
